# UtilityReview_app

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  structure.md
backend/: database.js  readShapefile.js  reproject.js  util.js
backend/export/: clipToKmz.js
backend/ingest/: index.js  kmlkmz.js  kmz.js  reproject.js  shapefile.js
backend_py/: Dockerfile  pyproject.toml
backend_py/app/: main.py
backend_py/app/api/: aoi.py  comments.py  export.py  ingest.py  workspace.py
backend_py/app/core/: config.py
backend_py/app/models/: db.py  schemas.py
backend_py/app/services/: geo.py  kmz.py
frontend/: electron.js  index.html  preload.js  renderer.js  style.css
frontend/electron/: kmz.js  main.js  preload.js
frontend/features/: contextmenu.js
frontend/js/: api.js  layers.js  legend.js  main.js  map.js  test_export.js  ui.js
frontend/js/core/: store.js
frontend/js/export/: collect.js  kml.js  legend.js
frontend/js/features/: aoi.js  comments.js  contextmenu.js  kmx-layer.js  search.js
frontend/js/features/AOI/: index.js
frontend/js/layers/: layers.js  legend.js
frontend/js/map/: map.js
