[project]
name = "ur-app-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "geopandas>=1.0",     # includes pyogrio wheels for shapefile/geojson
  "shapely>=2.0",
  "pyproj>=3.6",
  "simplekml>=1.3",     # KMZ export
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 5178
reload = false
